--- a/tutorial-1/package.json
+++ b/tutorial-1/package.json
@@ -9,13 +9,13 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
-    "sirv-cli": "^0.4.4"
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "rollup": "^2.44.0",
+    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-svelte": "^5.2.3",
+    "rollup-plugin-terser": "^5.3.1",
+    "sirv-cli": "^0.4.6",
+    "svelte": "^3.36.0"
   },
   "author": "wenqingzhang",
   "license": "Apache-2.0"
