--- a/tutorial-3/package.json
+++ b/tutorial-3/package.json
@@ -7,17 +7,17 @@
     "dev": "webpack-dev-server --content-base public"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.6.0",
-    "serve": "^11.0.0",
-    "svelte-routing": "^1.4.2",
+    "serve": "^11.3.2",
     "style-loader": "^0.23.1",
-    "svelte": "^3.0.0",
-    "svelte-loader": "2.13.3",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "svelte": "^3.36.0",
+    "svelte-loader": "^2.13.3",
+    "svelte-routing": "^1.5.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   },
   "author": "wenqingzhang",
   "license": "Apache-2.0"
