--- a/tutorial-3/package.json
+++ b/tutorial-3/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public"
+    "dev": "webpack serve --content-base public"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.6.0",
-    "serve": "^11.0.0",
-    "svelte-routing": "^1.4.2",
-    "style-loader": "^0.23.1",
-    "svelte": "^3.0.0",
-    "svelte-loader": "2.13.3",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.1",
+    "mini-css-extract-plugin": "^1.4.1",
+    "serve": "^11.3.2",
+    "style-loader": "^2.0.0",
+    "svelte": "^3.37.0",
+    "svelte-loader": "^3.1.0",
+    "svelte-routing": "^1.5.0",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "author": "wenqingzhang",
   "license": "Apache-2.0"
